--- a/src/templates/payments/op_detail.html
+++ b/src/templates/payments/op_detail.html
@@ -174,17 +174,15 @@
         <div class="field"></div>
       </div>
     </div>
-    <div class="field" style="grid-column: 1 / -1;">
+    <div class="card">
       <div class="label">Descripción</div>
       {% if puede_editar %}
         {{ form.descripcion }}
         {{ form.descripcion.errors }}
       {% else %}
-        <div class="control control-static">{{ op.descripcion|default:"-" }}</div>
+        <div class="control control-static op-desc-static">{{ op.descripcion|default:"-" }}</div>
       {% endif %}
-    </div>
-    
-
+    </div> 
     <div class="card">
       <h3 class="m0">Detalle (Ítems)</h3>
 
